--- a/mission-vision-values.html
+++ b/mission-vision-values.html
@@ -52,6 +52,10 @@
                             </a>
                         </div>
                     </div>
+                    
+                    <a class="navbar-item" href="https://kingdomappsolutions.tech/products.html">
+                        Products
+                    </a>
 
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-link is-active" href="https://kingdomappsolutions.tech/about.html">
