--- a/products.html
+++ b/products.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="Cache-Control" content="public, max-age:2592000" />
-        <meta name="description" content="The services offered by Kingdom Application Solutions LLC." />
+        <meta name="description" content="The products offered by Kingdom Application Solutions LLC." />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Our Services</title>
+        <title>Our Products</title>
         <link rel="icon" href="./images/favicon.ico" />
         <link rel="stylesheet" href="./styles/styles.css" />
         <link rel="stylesheet" defer href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
@@ -39,7 +39,7 @@
                     </a>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-link is-active" href="https://kingdomappsolutions.tech/services.html">
+                        <a class="navbar-link" href="https://kingdomappsolutions.tech/services.html">
                             Services
                         </a>
                 
@@ -53,7 +53,7 @@
                         </div>
                     </div>
 
-                    <a class="navbar-item" href="https://kingdomappsolutions.tech/products.html">
+                    <a class="navbar-item is-active" href="https://kingdomappsolutions.tech/products.html">
                         Products
                     </a>
 
@@ -97,7 +97,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title white-text">
-                        Our Services
+                        Our Products
                     </h1>
                     <picture>
                         <source srcset="./images/header.webp" type="images/webp">
@@ -111,44 +111,87 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Presently, we offer two main services at Kingdom Application Solutions LLC: hybrid mobile application development and website design and development for churches, ministries, missionaries, and religious non-profit organizations. Each of these services has the goal of advancing the kingdom and glorifying God through their creation. Click the link in each card below for more information for each of the services we offer.
+                    Along with providing hybrid mobile app development and website development services, Kingdom Application Solutions LLC produces it's own line of software products. Currently, we have several mobile apps developed and deployed to the app stores. More software products are in development and will be released at a later time and reflected on this page.
                 </h2><br>
-                <div class="columns is-centered">
-                    <div class="column">
+                <p></p>
+                <h1 class="title">
+                    Currently Deployed Apps
+                </h1>
+                <p></p>
+                <h2 class="subtitle privacy-h2">
+                    Our apps seek to provide solutions to problems our users face whether it be church or ministry-related issues, apps for missionaries, or providing entertainment value through games. Listed below are a sampling of our current app products available not including apps we have published for other clients.
+                </h2><br>
+                <div class="columns">
+                    <div class="column is-half">
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-mobile-screen"></i>
-                                    App Development
+                                    <i class="fa-solid fa-bullhorn"></i>
+                                    Simple Evangelism
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content justify">
-                                    We offer hybrid mobile app development for churches, ministries, missionaries, and religious non-profit organizations that wouldn't otherwise be able to have a mobile app presense. Our aim is to bring quality mobile app development to your organization at an affordable price.
-                                    <br><br>
-                                    Click the link to see more information about pricing for <u><a href="https://kingdomappsolutions.tech/apps.html">custom mobile app development</a></u>. <br><br><br>
-                                </div>
-                            </div>                  
-                        </div>
-                    </div>
+                                    Simple Evangelism is an app that every follower of Jesus can use to lead people into a saving relationship with him. The app guides the user in a conversation with another through simple questions and a pleasant user interface. <br><br>
 
-                    <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-laptop"></i>
-                                    Website Development
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content justify">
-                                    We offer the design and development of custom websites for churches, ministries, missionaries, and religious non-profit organizations. We primarily do this through the use of HTML, CSS, and JavaScript. We utilize popular custom elements to build a website to meet your needs, increase performance, and aid in search engine optimization. <br><br> We also offer the creation of websites through a content manangement option if that fits your needs better for easy updating. Click the link for information about <u><a href="https://kingdomappsolutions.tech/websites.html">website development pricing</a></u> for both custom and content management systems.<br>
+                                    Complete with common objections that people may offer, the app gives any Christian the confidence needed to share their faith. The app also offers a growth pathway for new believers that the user can follow to aid in initial discipleship efforts. <br><br>
+
+                                    Evangelism should be easy. Not hard.
                                 </div>
                             </div>
+                            <footer class="card-footer">
+                                <a class="card-footer-item" href='https://play.google.com/store/apps/details?id=tech.kingdomappsolutions.simpleevangelism' target="_blank">
+                                    <picture>
+                                        <source srcset="./images/google.webp" type="images/webp">
+                                        <source srcset="./images/google.png" type="images/png">
+                                        <img src='./images/google.webp' width="300" height="116" alt="Google Play Store">
+                                    </picture>
+                                </a>
+                                <a class="card-footer-item" href="https://apps.apple.com/us/app/simple-evangelism/id1616947451" target="_blank">
+                                    <picture>
+                                        <source srcset="./images/apple.webp" type="images/webp">
+                                        <source srcset="./images/apple.png" type="images/png">
+                                        <img src="./images/apple.webp" width="300" height="116" alt="Apple App Store">
+                                    </picture>
+                                </a>
+                            </footer>
+                        </div>
+                    </div><hr>
+                    <div class="column is-half">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-brain"></i>
+                                    Memory Brain Game
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content justify">
+                                    Memory Brain Game is a simple, Simon-like game that aids in building memory strength. The game initially has four levels of increasing difficulty. Tap the buttons that appear randomly every play to finish the level. <br><br>
+
+                                    Plans are in the works to scale the game to bring more unique game play. Various levels of difficulty will be introduced giving a 2x2, 3x3, 4x4, 5x5, and 6x6 game experience. These updates will be released later to give the game a more challenging aspect. <br><br>
+                                </div>
+                            </div>
+                            <footer class="card-footer">
+                                <a class="card-footer-item" href='https://play.google.com/store/apps/details?id=tech.kingdomappsolutions.memory' target="_blank">
+                                    <picture>
+                                        <source srcset="./images/google.webp" type="images/webp">
+                                        <source srcset="./images/google.png" type="images/png">
+                                        <img src='./images/google.webp' width="300" height="116" alt="Google Play Store">
+                                    </picture>
+                                </a>
+                                <a class="card-footer-item" href="https://apps.apple.com/app/memory-brain-game/id1626917663" target="_blank">
+                                    <picture>
+                                        <source srcset="./images/apple.webp" type="images/webp">
+                                        <source srcset="./images/apple.png" type="images/png">
+                                        <img src="./images/apple.webp" width="300" height="116" alt="Apple App Store">
+                                    </picture>
+                                </a>
+                            </footer>
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>     
         </section>
 
         <footer class="myfooter">
