--- a/apps.html
+++ b/apps.html
@@ -53,6 +53,10 @@
                         </div>
                     </div>
 
+                    <a class="navbar-item" href="https://kingdomappsolutions.tech/products.html">
+                        Products
+                    </a>
+
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-link" href="https://kingdomappsolutions.tech/about.html">
                             Info
@@ -187,83 +191,6 @@
                                     <h3>Periodic updates made as needed <br> to publish updated content.</h3>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                </div><hr>
-                <h1 class="title">
-                    Currently Deployed Apps
-                </h1>
-                <p></p>
-                <h2 class="subtitle privacy-h2">
-                    Kingdom Application Solutions LLC also produces its own mobile apps deployed to the app stores. Our apps seek to provide solutions to problems our users face whether it be church or ministry-related issues, apps for missionaries, or providing entertainment value through games. Listed below are a sampling of our current app products available.
-                </h2><br>
-                <div class="columns">
-                    <div class="column is-half">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-bullhorn"></i>
-                                    Simple Evangelism
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content justify">
-                                    Simple Evangelism is an app that every follower of Jesus can use to lead people into a saving relationship with him. The app guides the user in a conversation with another through simple questions and a pleasant user interface. <br><br>
-
-                                    Complete with common objections that people may offer, the app gives any Christian the confidence needed to share their faith. The app also offers a growth pathway for new believers that the user can follow to aid in initial discipleship efforts. <br><br>
-
-                                    Evangelism should be easy. Not hard.
-                                </div>
-                            </div>
-                            <footer class="card-footer">
-                                <a class="card-footer-item" href='https://play.google.com/store/apps/details?id=tech.kingdomappsolutions.simpleevangelism' target="_blank">
-                                    <picture>
-                                        <source srcset="./images/google.webp" type="images/webp">
-                                        <source srcset="./images/google.png" type="images/png">
-                                        <img src='./images/google.webp' width="300" height="116" alt="Google Play Store">
-                                    </picture>
-                                </a>
-                                <a class="card-footer-item" href="https://apps.apple.com/us/app/simple-evangelism/id1616947451" target="_blank">
-                                    <picture>
-                                        <source srcset="./images/apple.webp" type="images/webp">
-                                        <source srcset="./images/apple.png" type="images/png">
-                                        <img src="./images/apple.webp" width="300" height="116" alt="Apple App Store">
-                                    </picture>
-                                </a>
-                            </footer>
-                        </div>
-                    </div><hr>
-                    <div class="column is-half">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-brain"></i>
-                                    Memory Brain Game
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content justify">
-                                    Memory Brain Game is a simple, Simon-like game that aids in building memory strength. The game initially has four levels of increasing difficulty. Tap the buttons that appear randomly every play to finish the level. <br><br>
-
-                                    Plans are in the works to scale the game to bring more unique game play. Various levels of difficulty will be introduced giving a 2x2, 3x3, 4x4, 5x5, and 6x6 game experience. These updates will be released later to give the game a more challenging aspect. <br><br>
-                                </div>
-                            </div>
-                            <footer class="card-footer">
-                                <a class="card-footer-item" href='https://play.google.com/store/apps/details?id=tech.kingdomappsolutions.memory' target="_blank">
-                                    <picture>
-                                        <source srcset="./images/google.webp" type="images/webp">
-                                        <source srcset="./images/google.png" type="images/png">
-                                        <img src='./images/google.webp' width="300" height="116" alt="Google Play Store">
-                                    </picture>
-                                </a>
-                                <a class="card-footer-item" href="https://apps.apple.com/app/memory-brain-game/id1626917663" target="_blank">
-                                    <picture>
-                                        <source srcset="./images/apple.webp" type="images/webp">
-                                        <source srcset="./images/apple.png" type="images/png">
-                                        <img src="./images/apple.webp" width="300" height="116" alt="Apple App Store">
-                                    </picture>
-                                </a>
-                            </footer>
                         </div>
                     </div>
                 </div>
