--- a/websites.html
+++ b/websites.html
@@ -53,6 +53,10 @@
                         </div>
                     </div>
 
+                    <a class="navbar-item" href="https://kingdomappsolutions.tech/products.html">
+                        Products
+                    </a>
+
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-link" href="https://kingdomappsolutions.tech/about.html">
                             Info
