--- a/contact.html
+++ b/contact.html
@@ -157,7 +157,7 @@
                 
                     <div class="field is-grouped">
                         <div class="control">
-                            <button class="button is-dark" type="submit">Submit</button>
+                            <button class="button is-blue" type="submit">Submit</button>
                         </div>
                         <div class="control">
                             <button class="button is-light is-info" type="button" onclick="clearForm()">Cancel</button>
