Added question to contact page to prevent spam

--- a/contact.html
+++ b/contact.html
@@ -154,6 +154,13 @@
                             <textarea class="textarea is-info" placeholder="Type your message here" required name="Message"></textarea>
                         </div>
                     </div>
+
+                    <div class="field">
+                        <label class="label">What is 4 + 9? (number only)</label>
+                        <div class="control">
+                        <input class="input is-info" type="text" placeholder="Your answer" required name="Answer">
+                        </div>
+                    </div>
                 
                     <div class="field is-grouped">
                         <div class="control">
