Pricing updates & new website tier

--- a/apps.html
+++ b/apps.html
@@ -119,7 +119,7 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    A custom mobile app for your organization can enable you to effectively communicate with your congregation, ministry target area, mission field, or within your non-profit organization. Listed below are the custom app development packages Kingdom Application Solutions LLC offers to get your mobile app up and running and deployed to both major app stores. Contact us through the contact page if you are interested in custom app development.
+                    A custom hybrid mobile app for your organization can enable you to effectively communicate with your congregation, ministry target area, mission field, or within your non-profit organization. Listed below are the custom app development packages Kingdom Application Solutions LLC offers to get your mobile app up and running and deployed to both major app stores. Contact us through the contact page if you are interested in custom app development.
                 </h2><br>
                 <div class="columns">
                     <div class="column">
@@ -133,9 +133,9 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h3>Free initial consultation and quote!</h3>
-                                    <h3><b>$500 initial deposit</b></h3>
-                                    <h3><b>$150 per month to develop for both <br> Android and iOS</b></h3>
-                                    <h3><b>$500 final payment upon deployment</b></h3>
+                                    <h3><b>$250 initial deposit</b></h3>
+                                    <h3><b>$100 per month to develop for both <br> Android and iOS</b></h3>
+                                    <h3><b>$250 final payment upon deployment</b></h3>
                                     <h3>Deployment to the app stores</h3>
                                     <h3>Simple app consisting of up to three (3) pages <br> with tab navigation</h3>
                                     <h3>One (1) major feature integration</h3>
@@ -157,9 +157,9 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h3>Free initial consultation and quote!</h3>
-                                    <h3><b>$500 initial deposit</b></h3>
-                                    <h3><b>$200 per month to develop for both <br> Android and iOS</b></h3>
-                                    <h3><b>$500 final payment upon deployment</b></h3>
+                                    <h3><b>$250 initial deposit</b></h3>
+                                    <h3><b>$150 per month to develop for both <br> Android and iOS</b></h3>
+                                    <h3><b>$250 final payment upon deployment</b></h3>
                                     <h3>Deployment to the app stores</h3>
                                     <h3>Up to ten (10) pages with option <br> for side menu navigation as well as tabs</h3>
                                     <h3>Up to three (3) major features integrations</h3>
@@ -181,9 +181,9 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h3>Free initial consultation and quote!</h3>
-                                    <h3><b>$500 initial deposit</b></h3>
-                                    <h3><b>$250 per month to develop for both <br> Android and iOS</b></h3>
-                                    <h3><b>$500 final payment upon deployment</b></h3>
+                                    <h3><b>$250 initial deposit</b></h3>
+                                    <h3><b>$200 per month to develop for both <br> Android and iOS</b></h3>
+                                    <h3><b>$250 final payment upon deployment</b></h3>
                                     <h3>Deployment to the app stores</h3>
                                     <h3>More than ten (10) pages with <br> any navigation option</h3>
                                     <h3>Unlimited feature integrations</h3>
