--- a/websites.html
+++ b/websites.html
@@ -115,34 +115,12 @@
                 </h2>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    A custom website for your church, ministry, mission, or religious non-profit organization can enable you to effectively communicate with your congregation, ministry target area, mission field, or donors. Listed below are the two website development service packages Kingdom Application Solutions LLC offers to get your organizational website up and running. You can choose from a simple content management system (CMS) or opt for a more robust, custom website that increases search engine optimization and other website metrics to get your organization noticed. Contact us through the contact page if you are interested in website development for your organization.
+                    A custom website for your church, ministry, mission, or religious non-profit organization can enable you to effectively communicate with your congregation, ministry target area, mission field, or donors. Listed below are the website development packages Kingdom Application Solutions LLC offers to get your organizational website up and running. You can choose from a robust, custom website that increases search engine optimization and other website metrics to get your organization noticed or a simple content management system (CMS). Contact us through the contact page if you are interested in website development for your organization.
                 </h2><br>
                 <h1 class="title">
                     Pricing
                 </h1>
                 <div class="columns">
-                    <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-laptop"></i>
-                                    CMS Development
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content">
-                                    <h3>Free initial consultation!</h3>
-                                    <h3>$500 initial deposit</h3>
-                                    <h3>$500 final payment upon deployment</h3>
-                                    <h3>$150 monthly service which includes: <br><br> <b>Website Development, Graphic Design, Domain Setup, Hosting Fees for One Year, and Periodic Updates</b></h3>
-                                    <h3>Ten (10) page limit</h3>
-                                    <h3>$100 per page for development <br> over the 10 page limit</h3>
-                                    <h3>$100 per year for hosting renewal</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                
                     <div class="column">
                         <div class="card">
                             <header class="card-header">
@@ -154,11 +132,56 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h3>Free initial consultation!</h3>
-                                    <h3>$500 initial deposit</h3>
-                                    <h3>$500 final payment upon deployment</h3>
-                                    <h3>$200 monthly service which includes: <br><br><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Fees for One Year, and Periodic Updates</b></h3>
+                                    <h3>$250 initial deposit</h3>
+                                    <h3>$250 final payment upon deployment</h3>
+                                    <h3>$200 monthly service which includes: <br><br><b>Custom Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Fees for One Year, and Periodic Updates</b></h3>
                                     <h3>Unlimited pages</h3>
                                     <h3>$100 per year for hosting renewal</h3>
+                                    <h3><b><i>BEST OVERALL VALUE!</i></b></h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-laptop"></i>
+                                    CMS Development
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h3>Free initial consultation!</h3>
+                                    <h3>$250 initial deposit</h3>
+                                    <h3>$250 final payment upon deployment</h3>
+                                    <h3>$125 monthly service which includes: <br><br> <b>CMS Website Development, Graphic Design, Domain Setup, Hosting Fees for One Year, and Periodic Updates</b></h3>
+                                    <h3>Ten (10) page limit</h3>
+                                    <h3>$100 per page for development <br> over the 10 page limit as a one-time charge</h3>
+                                    <h3>$100 per year for hosting renewal</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-laptop"></i>
+                                    One-Time Development
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h3>Free initial consultation!</h3>
+                                    <h3>$500 initial deposit</h3>
+                                    <h3>$500 final payment upon deployment</h3>
+                                    <h3>Package includes: <br><br> <b>CMS Website Development, Graphic Design, Domain Setup, and Hosting Setup</b></h3>
+                                    <h3>$100 per page for development <br> (Five page minimum)</h3>
+                                    <h3>Optional $100 per month for content management and periodic updates</h3>
+                                    <h3><b>BEST VALUE FOR SELF MANAGEMENT!</b></h3>
                                 </div>
                             </div>
                         </div>
