New resource page & affiliate links

--- a/affiliate-disclosure.html
+++ b/affiliate-disclosure.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="Cache-Control" content="public, max-age:2592000" />
-        <meta name="description" content="Read about the mission, vision, and values of Kingdom Application Solutions LLC." />
+        <meta name="description" content="Read about the affiliate disclosure and the type of affiliate programs of which Kingdom Application Solutions LLC is a part." />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mission, Vision, & Values</title>
+        <title>Affiliate Disclosure</title>
         <link rel="icon" href="./images/favicon.ico" />
         <link rel="stylesheet" href="./styles/styles.css" />
         <link rel="stylesheet" defer href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
@@ -52,7 +52,7 @@
                             </a>
                         </div>
                     </div>
-                    
+
                     <a class="navbar-item" href="https://kingdomappsolutions.tech/products.html">
                         Products
                     </a>
@@ -74,16 +74,17 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/about.html">
                                 About Us
                             </a>
-                            <a class="navbar-item is-active" href="https://kingdomappsolutions.tech/mission-vision-values.html">
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/mission-vision-values.html">
                                 Our Mission, Vision, & Values
                             </a>
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/contact.html">
                                 Contact Us
                             </a>
+                            <hr class="navbar-divider">
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/privacy.html">
                                 Privacy Policy
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/affiliate-disclosure.html">
+                            <a class="navbar-item is-active" href="https://kingdomappsolutions.tech/affiliate-disclosure.html">
                                 Affiliate Disclosure
                             </a>
                         </div>
@@ -107,7 +108,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title white-text">
-                        The Mission, Vision, and Values of Kingdom Application Solutions LLC
+                        Kingdom Application Solutions LLC <br> Affiliate Disclosure
                     </h1>
                     <picture>
                         <source srcset="./images/header.webp" type="images/webp">
@@ -120,83 +121,30 @@
         
         <section class="hero section-padding">
             <div class="hero-body">
-                <h1 class="title">
-                    Our Mission
-                </h1>
-                <p></p>
-                <h2 class="subtitle">
-                    Kingdom Application Solutions LLC exists to glorify God through the creation and distribution of quality mobile apps and website design & development for churches, ministries, missionaries, and religious non-profit organizations.
-                </h2><br><hr>
-                <h1 class="title">
-                    Our Vision
-                </h1>
-                <p></p>
-                <h2 class="subtitle">
-                    Kingdom Application Solutions LLC envisions a global impact from its mobile apps and website design and development. We envision aiding churches, ministries, missionaries, and other religious non-profit organizations in reaching the world for Christ and bringing people into a saving relationship with Him through quality web & mobile software development. 
-                </h2><br><hr>
-                <h1 class="title">
-                    Our Values
-                </h1>
-                <p></p>
-                <h2 class="subtitle">
-                    Kingdom Application Solutions LLC has four main core values:
-                </h2>
-                <div class="columns">
-                    <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    Excellence in Everything
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content">
-                                    Excellence is when we demand more of ourselves than our clients do. Excellence in Everything means we go out of our way to ensure that every app or website developed is fully functional and provides a quality user experience. We will produce and deliver the best products and services we are capable of producing. 
-                                </div>
-                            </div>
-                        </div>
+                <div class="columns is-centered">
+                    <div class="column is-half is-centered">
+                        <h2 class="subtitle privacy-h2">
+                            When we link to products and services, those links may be affiliate links. If you click on any of those affiliate links and make a purchase within a certain time frame, we’ll earn a small commission. The commission is paid by the retailers, at no cost to you.
+                        </h2>
+                        <h2 class="subtitle privacy-h2">
+                            We are careful to link to products and retailers that provide resources that are useful for ministry purposes and ones which we would use as well. Money earned helps keep Kingdom Application Solutions LLC running and allows us to continue our ministry to provide support to churches, missionaries and Christian non-profit organizations. Thank you for your support.
+                        </h2><br>
+                        <h2 class="subtitle privacy-h2">
+                            <b>Select Affiliate Partners:</b>
+                        </h2>
+                        <h2 class="subtitle privacy-h2">
+                            As an Amazon Associate, I earn from qualifying purchases.
+                        </h2>
+                        <h2 class="subtitle privacy-h2">
+                            Kingdom Application Solutions LLC is also a member of Church Source through the Share-A-Sale program as well as the Christianbook.com affiliate program. 
+                        </h2>
                     </div>
                     <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    Integrity and Honesty
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content">
-                                    Integrity and honesty are two sides of the same coin. To have integrity is to be honest and have strong moral principles. Integrity creates trust. When clients place their trust in us, it is because of our goal to maintain strong integrity and honesty. We will act in a trustworthy manner that earns the respect of our clients.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    Client Focused
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content">
-                                    Our company exists to help churches, ministries, missionaries, and religious non-profit organizations to have access to quality made websites and mobile apps. We make every decision and measure every outcome based on how well it serves our clients and how it builds the Kingdom. We listen to our clients’ needs, provide options, and deliver beyond their expectations.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    Accountability
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content">
-                                    Accountability is about staying true to our word. It means we do what we say we’re going to do. If something happens to prevent that, we determine the new course and communicate quickly. We believe that accepting responsibility for your actions (and inactions) is the ultimate way to build trust and also exemplifies our committment to glorify God through our work.
-                                </div>
-                            </div>
-                        </div>
+                        <picture>
+                            <source srcset="./images/affiliate.webp" type="images/webp">
+                            <source srcset="./images/affiliate.png" type="images/png">
+                            <img class="image-home" src="./images/affilate.webp" alt="Who we are" width="640" height="480">
+                        </picture>
                     </div>
                 </div>
             </div>     
