--- a/success.html
+++ b/success.html
@@ -15,7 +15,7 @@
     </head>
 
     <body onload="redirect()">
-        <nav class="navbar is-dark is-fixed-top" role="navigation" aria-label="main navigation">
+        <nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item" href="https://kingdomappsolutions.tech">
                     <picture>
@@ -57,6 +57,14 @@
                         Products
                     </a>
 
+                    <a class="navbar-item" href="https://kingdomappsolutions.tech/resources.html">
+                        Resources
+                    </a>
+
+                    <a class="navbar-item" href="https://kingdomblog.tech">
+                        Blog
+                    </a>
+
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-link is-active" href="https://kingdomappsolutions.tech/about.html">
                             Info
@@ -75,6 +83,9 @@
                             <hr class="navbar-divider">
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/privacy.html">
                                 Privacy Policy
+                            </a>
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/affiliate-disclosure.html">
+                                Affiliate Disclosure
                             </a>
                         </div>
                     </div>
