--- a/resources.html
+++ b/resources.html
@@ -51,6 +51,9 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
                             </a>
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
+                                Graphic Design
+                            </a>
                         </div>
                     </div>
 
@@ -122,6 +125,7 @@
         
         <section class="hero section-padding">
             <div class="hero-body">
+                <h4><i>Links on this page are affiliate links. Read more about our affiliate links in our <a href="https://kingdomappsolutions.tech/affiliate-disclosure.html">affiliate disclosure.</a></i></h4><br>
                 <div class="columns is-centered">
                     <div class="column is-half is-centered">
                         <h2 class="subtitle privacy-h3">
