--- a/products.html
+++ b/products.html
@@ -50,6 +50,9 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
                             </a>
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
+                                Graphic Design
+                            </a>
                         </div>
                     </div>
 
